--- a/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="cta-content callout-image policy-stats">
+    <!-- <div class="cta-content callout-image policy-stats">
         <div class="container-fluid">
             <h2>Third sector statistics</h2>
             <div class="mdc-layout-grid">
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="container-fluid content page-content">
         <div class="mdc-layout-grid latest-content">
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </div>
-        <div class="mdc-layout-grid support support-policy">
+        <div class="mdc-layout-grid equal-height support support-policy">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <div class="mdc-card">
