--- a/functions/test-db/json2/scvo/templates/main_search/search.hbs
+++ b/functions/test-db/json2/scvo/templates/main_search/search.hbs
@@ -18,11 +18,29 @@
         </div>
     </div> -->
     <div class="container-fluid search-page">
-        <div class="mdc-layout-grid">
-            <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar">
-                    <form action="/search" method="GET" [searchroute]="'main_search'" data-auto-search="true" autocomplete="off">
-                        <input type="text" class="mdc-textfield__input searchRoute" placeholder="Search keywords" value="{{params.query.q}}" name="q" id="main-q">
+        <form action="/search" method="GET" [searchroute]="'main_search'" data-auto-search="true" autocomplete="off">
+            <div class="mdc-layout-grid">
+                <div class="mdc-layout-grid__inner">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+                        <h2>Keywords</h2>
+                        <div style="main_search">
+                            <div class="search_form">
+                                <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute" placeholder="Search SCVO, Goodmoves, TFN, and more" id="main-q" name="q" value="{{params.query.q}}">
+                                <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
+                                    <span class="far fa-2x fa-search" aria-hidden="true"></span>
+                                </button>
+                            </div>
+                        </div>
+
+                        {{> search_info}}
+
+                        {{#each primaryResponse.hits.hits}}
+                            {{>highlight_result}}
+                        {{/each}}
+
+                        {{> pagination}}
+                    </div>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar">
                         {{#*inline "filter_checkbox"}}
                             <div class="mdc-form-field">
                                 <div class="mdc-checkbox">
@@ -42,6 +60,7 @@
                             </div>
                         {{/inline}}
 
+                        <h2>Filters</h2>
                         <h3>SCVO</h3>
                         {{>filter_checkbox label="Pages" value="scvo-cms-page"}}
                         {{>filter_checkbox label="Posts" value="scvo-cms-post"}}
@@ -74,18 +93,9 @@
                         {{>filter_checkbox label="Lists" value="tfn-list"}}
                         {{>filter_checkbox label="News posts" value="tfn-news-post"}}
                         {{>filter_checkbox label="Polls" value="tfn-poll"}}
-                    </form>
-                </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
-                    {{> search_info}}
-
-                    {{#each primaryResponse.hits.hits}}
-                        {{>highlight_result}}
-                    {{/each}}
-
-                    {{> pagination}}
+                    </div>
                 </div>
             </div>
-        </div>
+        </form>
     </div>
 </div>
