--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -846,8 +846,10 @@ figure {
         }
     }
 }
-.search {
+section.search {
     margin-bottom: $unit*2;
+}
+.search {
     h3 {
         margin: $unit*2 0 0;
     }
