Staff detail page

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2214,6 +2214,7 @@ table.membership-fees {
     }
     dt {
         clear: both;
+        font-weight: 600;
         width: 20%;
     }
     dd {
