--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2345,6 +2345,16 @@ table.membership-fees {
     }
 }
 
+// Hide CU members site
+#credit-union-menu {
+    a:nth-child(2),
+    a:nth-child(6),
+    a:nth-child(7),
+    a:nth-child(8) {
+        display: none;
+    }
+}
+
 .mdc-simple-menu {
     .fa-fw {
         margin-right: $unit/2;
