--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1661,6 +1661,7 @@ body.the-gathering {
     .splash-image .splash-overlay .container-fluid {
         min-height: 30vh;
         .mdc-layout-grid {
+            line-height: 0;
             margin: 0;
             width: 100%;
             text-align: center;
@@ -2144,15 +2145,15 @@ table.membership-fees {
     h3 {
         margin-top: 0;
     }
-    form h3 {
+    form .sidebar h3 {
         margin-top: $unit;
     }
 }
 
 .search-info {
     margin-bottom: $unit;
-    border: 0.125rem solid #ddd;
-    background: #f8f8f8;
+    // border: 0.125rem solid #ddd;
+    background: #fafafa;
     color: #555;
     padding: $unit/3 $unit/2;
     box-sizing: border-box;
@@ -2625,6 +2626,14 @@ p:last-child {
             padding: $unit 0 0;
             font-size: 95%;
         }
+    }
+    .alignleft {
+        float: left;
+        margin-right: $unit;
+    }
+    .alignright {
+        float: right;
+        margin-left: $unit;
     }
 }
 .static-sidebar,
