--- a/functions/test-db/json2/scvo/partials/search-info.hbs
+++ b/functions/test-db/json2/scvo/partials/search-info.hbs
@@ -1,11 +1,11 @@
 {{#if paging.totalResults}}
-<div class="search-info">
+<div class="search-info mdc-elevation--z3">
     <strong>Total results:</strong> {{addCommas paging.totalResults}} |
     <strong>Current page:</strong> {{addCommas paging.currentPage}} of {{addCommas paging.totalPages}}
 </div>
 {{else}}
 {{#if params.query.q}}
-<div class="search-info">
+<div class="search-info mdc-elevation--z1">
     No results, please try a different search query
 </div>
 {{/if}}
