--- a/functions/test-db/json2/digitalparticipation/templates/skill-up.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/skill-up.hbs
@@ -1,6 +1,6 @@
 <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner title">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-5">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-phone">
             <h1>Back The Basics</h1>
             <p>
                 Basic digital skills can mean different things to different folk.
@@ -11,216 +11,216 @@
             </p>
             <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="Back The Basics illustration" class="responsive-img hide-on-med-and-up" />
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-2-tablet">
             &nbsp;
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="Back The Basics illustration" class="responsive-img" />
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet">
             &nbsp;
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <hr />
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <h1 id="digital_skills">Digital Skills</h1>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-2">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             &nbsp;
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-4-phone">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <hr class="nomargin" />
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <span class="number">1</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-9-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-phone">
             <h3>
                 Managing Info
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell s1 hide-on-med-and-up">
+        <div class="mdc-layout-grid__cell hide-on-med-and-up mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <a href="skill-up/managing-information">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
             <p>
                 Think about the ways in which you could improve your skills &amp;
                 capabilities to find, manage and store digital information.
             </p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <a href="skill-up/managing-information">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <hr class="nomargin" />
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <span class="number">2</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-9-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-phone">
             <h3>
                 Communicating
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell s1 hide-on-med-and-up">
+        <div class="mdc-layout-grid__cell hide-on-med-and-up mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <a href="skill-up/communicating">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
             <p>
                 Look at improvements to the ways in which you communicate,
                 interact, collaborate and connect with others.
             </p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <a href="skill-up/communicating">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <hr class="nomargin" />
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <span class="number">3</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-9-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-phone">
             <h3>
                 Transacting
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell s1 hide-on-med-and-up">
+        <div class="mdc-layout-grid__cell hide-on-med-and-up mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <a href="skill-up/transacting">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
             <p>
                 How might you better sell &amp; purchase goods, organise
                 finances and make use of digital government services.
             </p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <a href="skill-up/transacting">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <hr class="nomargin" />
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <span class="number">4</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-9-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-phone">
             <h3>
                 Problem Solving
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell s1 hide-on-med-and-up">
+        <div class="mdc-layout-grid__cell hide-on-med-and-up mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <a href="skill-up/problem-solving">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
             <p>
                 Uncover new ways to use digital tools to solve problems and
                 find solutions - increasing independence and confidence
             </p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <a href="skill-up/problem-solving">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <hr class="nomargin" />
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <span class="number">5</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-9-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-phone">
             <h3>
                 Creating
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell s1 hide-on-med-and-up">
+        <div class="mdc-layout-grid__cell hide-on-med-and-up mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <a href="skill-up/creating">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
             <p>
                 Discover new and improved ways to make connections and engage
                 with people through the creation of digital content.
             </p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
             <h3>
                 <a href="skill-up/creating">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <hr class="margin-bottom" />
         </div>
     </div>
 
     <div class="mdc-layout-grid__inner title">
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-3-tablet">
             <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Why-It-Matters-RGB-04.png" alt="Why It Matters? illustration" class="responsive-img" />
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet">
             &nbsp;
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <h1>Why It Matters?</h1>
             <p>
                 Across Scotland, around 800,000 adults don’t have the basic digital skills they need to use the internet effectively. If this were just a case of missing out on a few distracting websites and celebrity tweets then we might think nothing more of it. But the stakes are so much higher. Amongst other things, the internet helps people keep in touch, learn new things, save money, find work and stay healthy. For some people it’s been a genuine life saver. These things matter to everyone, and they should be for everyone.
