--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2151,12 +2151,17 @@ table.membership-fees {
 }
 
 .search-info {
-    margin-bottom: $unit;
     // border: 0.125rem solid #ddd;
+    margin-bottom: $unit;
     background: #fafafa;
     color: #555;
     padding: $unit/3 $unit/2;
     box-sizing: border-box;
+}
+body.post.author {
+    .search-info {
+        margin-top: $unit;
+    }
 }
 
 .search-result {
@@ -2634,6 +2639,10 @@ p:last-child {
     .alignright {
         float: right;
         margin-left: $unit;
+    }
+    .aligncenter {
+        display: block;
+        margin: 0 auto;
     }
 }
 .static-sidebar,
