--- a/functions/test-db/json2/digitalparticipation/templates/signatory-search.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/signatory-search.hbs
@@ -4,7 +4,7 @@
     <form action="/signatories" [searchroute]="'signatory_search'" data-auto-search="true" id="signatory-search">
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                     <h4>Search</h4>
                     <div class="mdc-textfield mdc-textfield--upgraded keywords">
                         <input type="text" class="mdc-textfield__input" name="q" id="charter-keywords" value="{{params.query.q}}" placeholder="Search for a charter signatory" autofocus>
@@ -13,7 +13,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <h4>Sector</h4>
                     <div class="mdc-form-field sector">
                         <select class="mdc-select" role="listbox" id="charter-sector" name="sector" data-clear-input="#charter-category">
@@ -24,7 +24,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <h4>Category</h4>
                     <div class="mdc-form-field category">
                         <select class="mdc-select" role="listbox" id="charter-category" name="category">
@@ -37,13 +37,13 @@
                 </div>
             </div>
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                     <h4>Total signatories found: {{primaryResponse.hits.total}}</h4>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-1-phone">
                     <h4 class="sort">Sort</h4>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-3-phone">
                     <div class="mdc-form-field sort">
                         <select class="mdc-select" role="listbox" id="charter-sort" name="sort">
                             <option value="" {{#if params.query.sort}}{{else}}selected{{/if}}>Date signed</option>
