--- a/src/assets/css/humanrightsdeclaration-styles.scss
+++ b/src/assets/css/humanrightsdeclaration-styles.scss
@@ -284,9 +284,9 @@ p.quote {
     .mdc-textfield__input {
         margin-bottom: 1rem;
     }
-    .mdc-select {
-        background-image: none;
-    }
+    // .mdc-select {
+    //     background-image: none;
+    // }
     .mdc-form-field {
         width: 100%;
         .mdc-select {
