--- a/src/assets/css/humanrightsdeclaration-styles.scss
+++ b/src/assets/css/humanrightsdeclaration-styles.scss
@@ -350,6 +350,7 @@ p.quote {
             font-size: 1rem;
             font-weight: bold;
             color: $brand-colour;
+            margin: 0 auto;
             span {
                 position: absolute;
                 bottom: 0;
@@ -630,6 +631,11 @@ footer {
     .pagination-distance-6,
     .pagination-distance-5 {
         display: none !important;
+    }
+    footer .logo.scvo {
+        position: relative;
+        bottom: 0;
+        right: 0;
     }
 }
 
