--- a/src/assets/css/digitalparticipation-styles.scss
+++ b/src/assets/css/digitalparticipation-styles.scss
@@ -258,6 +258,7 @@ a {
         .mdc-tab:hover {
             border: $brand-border-width solid $brand-typography;
             background: white;
+            opacity: 1;
         }
         .mdc-tab,
         .mdc-tab:hover {
@@ -310,6 +311,7 @@ a {
                 .mdc-tab--active {
                     background-color: $brand-typography;
                     border-color: white;
+                    opacity: 1;
                 }
             }
         }
