--- a/src/assets/css/humanrightsdeclaration-styles.scss
+++ b/src/assets/css/humanrightsdeclaration-styles.scss
@@ -151,8 +151,9 @@ a {
             padding: $spacing-unit;
             text-transform: none;
         }
-        .mdc-tab.active,
+        .mdc-tab--active,
         .mdc-tab:hover {
+            opacity: 1;
             text-decoration: underline;
         }
         .mdc-tab,
