--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1291,6 +1291,9 @@ section.search {
                     display: none;
                 }
             }
+            .mdc-tab.mdc-tab--active {
+                opacity: 1;
+            }
             #main-tab-bar {
                 .mdc-tab:hover .mdc-tab--label {
                     border-bottom-color: rgba(255,255,255,0.6);
