--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1220,6 +1220,7 @@ section.search {
                 .mdc-textfield__input,
                 .mdc-textfield__input:focus,
                 .mdc-textfield__input:hover {
+                    font-size: 16px;
                     color: rgba(255,255,255,.87);
                     border-width: $unit/8;
                     border-style: solid;
@@ -1364,13 +1365,19 @@ section.search {
 }
 .mdc-temporary-drawer {
     display: none;
+    .mdc-temporary-drawer__header,
+    .mdc-temporary-drawer__header-content {
+        height: 58px;
+    }
     .mdc-temporary-drawer__header-content {
         direction: ltr;
-        padding: $unit;
+        padding: 0 $unit*0.7;
+        -webkit-box-align: center;
+        align-items: center;
     }
-    .mdc-temporary-drawer__header:before {
-        padding-top: 24%;
-    }
+    // .mdc-temporary-drawer__header:before {
+    //     padding-top: 24%;
+    // }
     .mdc-list-group {
         direction: ltr;
         .mdc-list {
@@ -2941,6 +2948,9 @@ footer {
     .home {
         .splash-image.hello .container-fluid .mdc-layout-grid {
             margin-left: 0;
+        }
+        .search .search_form {
+            margin: 0;
         }
         .latest-content {
             h2 a,
