Policy stats work in progress

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1017,6 +1017,13 @@ section.search {
         h2 {
             margin-top: 0;
         }
+        p {
+            margin: $unit 0 0;
+        }
+        a {
+            color: white;
+            text-decoration: underline;
+        }
         .mdc-layout-grid__cell {
             padding: $unit*1.5 0 $unit/2;
             text-align: center;
@@ -2130,6 +2137,9 @@ table.membership-fees {
         padding-top: $unit/2;
         padding-bottom: $unit;
     }
+}
+.scvo-event .mdc-card__primary {
+    padding-bottom: $unit/2;
 }
 .mdc-card__supporting-text {
     padding: 0 $unit $unit/2;
