--- a/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
@@ -70,7 +70,7 @@
                         </p>
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                        <span class="fal fa-fw fa-comments fa-5x"> </span>
+                        <span class="fal fa-fw fa-chart-pie fa-5x"> </span>
                         <p>
                             <strong>74% of charities have no paid staff</strong>
                         </p>
