--- a/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
@@ -10,15 +10,15 @@
                 <div class="container-fluid">
                     <div class="caption">
                         <p>
-                            Over 8000 young people in jobs since 2011
+                            8,000 young people employed
                         </p>
                         <p>
-                            Over 600 third sector organisations involved, across Scotland
+                            600 partner organisations
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="cta-content callout-image jobs swiper-slide">
+            <!-- <div class="cta-content callout-image jobs swiper-slide">
                 <div class="container-fluid">
                     <div class="caption">
                         <p>
@@ -38,11 +38,11 @@
                         </p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
-        <div class="swiper-pagination"></div>
+        <!-- <div class="swiper-pagination"></div>
         <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-prev"></div> -->
     </div>
     <div class="container-fluid">
         <div class="mdc-layout-grid">
@@ -74,4 +74,4 @@
 
 {{> footer_services}}
 
-<script src="/assets/js/scvo/cjs-landing.js"></script>
+<!-- <script src="/assets/js/scvo/cjs-landing.js"></script> -->
