--- a/functions/test-db/json2/scvo/partials/wee-search.hbs
+++ b/functions/test-db/json2/scvo/partials/wee-search.hbs
@@ -1,17 +1,19 @@
-<div class="mdc-card mdc-card-search">
+<div class="mdc-card mdc-card-search search">
     <section class="mdc-card__primary">
         <h2 class="mdc-card__title mdc-card__title--large">{{title}}</h2>
-        <form action="{{searchPath}}" method="GET" [searchroute]="'{{searchRoute}}'" autocomplete="off">
+        <form action="{{searchPath}}" method="GET" [searchroute]="'{{searchRoute}}'" class="search_form" autocomplete="off">
             <div class="mdc-textfield mdc-textfield--upgraded">
                 <input type="text" class="mdc-textfield__input" name="q" id="wee-query" value="{{params.query.q}}">
-                <div class="mdc-textfield__bottom-line"></div>
+                <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
+                    <span class="far fa-2x fa-search" aria-hidden="true"></span>
+                </button>
             </div>
             {{#each (keyValue (parse extraParams))}}
             <input type="hidden" name="{{key}}" value="{{value}}">
             {{/each}}
-            <button class="mdc-button mdc-button--raised" type="submit">
+            <!-- <button class="mdc-button mdc-button--raised" type="submit">
                 Search
-            </button>
+            </button> -->
         </form>
     </section>
 </div>
