--- a/functions/test-db/json2/scvo/templates/events/event-digital-search.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-digital-search.hbs
@@ -28,7 +28,7 @@
         <form action="/digital/events" method="GET" [searchroute]="'event_digital_search'" data-auto-search="true">
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar event-sidebar">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar event-sidebar">
                         <div class="mdc-textfield mdc-textfield--upgraded">
                             <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" placeholder="Keywords" value="{{params.query.q}}">
                         </div>
@@ -61,7 +61,7 @@
                                 {{/each}}
                             </select>
                         </div>
-                        <div class="mdc-form-field">
+                        <!-- <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" class="mdc-checkbox__native-control" id="events-free" name="free" {{#if params.query.free}}checked{{/if}} />
                                 <div class="mdc-checkbox__background">
@@ -72,12 +72,12 @@
                                 </div>
                             </div>
                             <label for="events-free">Only free events</label>
-                        </div>
+                        </div> -->
                         <button class="mdc-button mdc-button--raised" type="submit">
                             Search
                         </button>
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content event-content">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content event-content">
                         {{> search_info}}
 
                         {{#each primaryResponse.hits.hits}}
@@ -85,8 +85,6 @@
                         {{/each}}
 
                         {{> pagination}}
-                    </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar event-sidebar">
                     </div>
                 </div>
             </div>
