--- a/functions/test-db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
@@ -1,4 +1,4 @@
-<div class="event event-search">
+<div class="job-search">
     <div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}" style="{{> header_splash_image}}">
         <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
@@ -24,66 +24,92 @@
             <li>Search</li>
         </ul>
 
-        <h2 class="mdc-card__title mdc-card__title--large">Find Jobs</h2>
-        <form action="/jobs/search" method="GET" [searchroute]="'job_search'" data-auto-search="true">
-            <div class="mdc-layout-grid">
-                <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell">
-                        <div class="mdc-textfield mdc-textfield--upgraded">
-                            <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" placeholder="Keywords" value="{{params.query.q}}">
-                            <!-- <label class="mdc-textfield__label" for="events-keywords">Keywords</label> -->
-                            <!-- <div class="mdc-textfield__bottom-line"></div> -->
+        <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
+                    <h2 class="mdc-card__title mdc-card__title--large">Search jobs</h2>
+                    <form action="/jobs/search" method="GET" [searchroute]="'job_search'" data-auto-search="true">
+                        <div class="mdc-layout-grid">
+                            <div class="mdc-layout-grid__inner">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                                    <div class="mdc-textfield mdc-textfield--upgraded">
+                                        <label class="mdc-textfield__label" for="q">Keywords</label>
+                                        <input type="text" class="mdc-textfield__input" name="q" id="jobs-keywords" placeholder="Keywords" value="{{params.query.q}}">
+                                    </div>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                                    <div class="mdc-form-field">
+                                        <label class="mdc-textfield__label" for="role">Role</label>
+                                        <select class="mdc-select" role="listbox" id="jobs-role" name="role">
+                                            <option value="" {{#if params.query.role}}{{else}}selected{{/if}}>Any role</option>
+                                            {{#each supplimentaryResponses.types.aggregations.roles.buckets}}
+                                            <option value="{{key}}" {{#compare ../params.query.role "===" key}}selected{{/compare}}>{{key}}</option>
+                                            {{/each}}
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                                    <div class="mdc-form-field">
+                                        <label class="mdc-textfield__label" for="sector">Sector</label>
+                                        <select class="mdc-select" role="listbox" id="jobs-sector" name="sector">
+                                            <option value="" {{#if params.query.sector}}{{else}}selected{{/if}}>Any sector</option>
+                                            {{#each supplimentaryResponses.types.aggregations.sectors.buckets}}
+                                            {{#if key}}
+                                            <option value="{{key}}" {{#compare ../params.query.sector "===" key}}selected{{/compare}}>{{key}}</option>
+                                            {{/if}}
+                                            {{/each}}
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                                    <div class="mdc-form-field">
+                                        <label class="mdc-textfield__label" for="jobs-region">Region</label>
+                                        <select class="mdc-select" role="listbox" id="region" name="region">
+                                            <option value="" {{#if params.query.region}}{{else}}selected{{/if}}>Any region</option>
+                                            {{#each supplimentaryResponses.types.aggregations.regions.buckets}}
+                                            {{#if key}}
+                                            <option value="{{key}}" {{#compare ../params.query.region "===" key}}selected{{/compare}}>{{key}}</option>
+                                            {{/if}}
+                                            {{/each}}
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                                    <div class="mdc-form-field">
+                                        <label class="mdc-textfield__label" for="status">Status</label>
+                                        <select class="mdc-select" role="listbox" id="jobs-status" name="status">
+                                            <option value="" {{#if params.query.status}}{{else}}selected{{/if}}>Any status</option>
+                                            {{#each supplimentaryResponses.types.aggregations.statuses.buckets}}
+                                            {{#if key}}
+                                            <option value="{{key}}" {{#compare ../params.query.status "===" key}}selected{{/compare}}>{{key}}</option>
+                                            {{/if}}
+                                            {{/each}}
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                                    <div class="mdc-textfield mdc-textfield--upgraded">
+                                        <label class="mdc-textfield__label" for="minimum_salary">Minimum salary</label>
+                                        <input type="text" class="mdc-textfield__input" name="minimum_salary" id="jobs-minimum_salary" placeholder="e.g. 32000" value="{{params.query.q}}">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                        <button class="mdc-button mdc-button--raised" type="submit">
+                            Search jobs
+                        </button>
+                    </form>
                 </div>
-                <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell">
-                        <div class="mdc-form-field">
-                            <select class="mdc-select" role="listbox" id="events-role" name="role">
-                                <option value="" {{#if params.query.role}}{{else}}selected{{/if}}>Any role</option>
-                                {{#each supplimentaryResponses.types.aggregations.roles.buckets}}
-                                <option value="{{key}}" {{#compare ../params.query.role "===" key}}selected{{/compare}}>{{key}}</option>
-                                {{/each}}
-                            </select>
-                        </div>
-                    </div>
-                    <div class="mdc-layout-grid__cell">
-                        <div class="mdc-form-field">
-                            <select class="mdc-select" role="listbox" id="events-sector" name="sector">
-                                <option value="" {{#if params.query.sector}}{{else}}selected{{/if}}>Any sector</option>
-                                {{#each supplimentaryResponses.types.aggregations.sectors.buckets}}
-                                {{#if key}}
-                                <option value="{{key}}" {{#compare ../params.query.sector "===" key}}selected{{/compare}}>{{key}}</option>
-                                {{/if}}
-                                {{/each}}
-                            </select>
-                        </div>
-                    </div>
-                    <div class="mdc-layout-grid__cell">
-                        <div class="mdc-form-field">
-                            <select class="mdc-select" role="listbox" id="events-status" name="status">
-                                <option value="" {{#if params.query.status}}{{else}}selected{{/if}}>Any status</option>
-                                {{#each supplimentaryResponses.types.aggregations.statuses.buckets}}
-                                {{#if key}}
-                                <option value="{{key}}" {{#compare ../params.query.status "===" key}}selected{{/compare}}>{{key}}</option>
-                                {{/if}}
-                                {{/each}}
-                            </select>
-                        </div>
-                    </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
+                    {{> search_info}}
+
+                    {{#each primaryResponse.hits.hits}}
+                    {{{_source.rendered.scvo_search_result}}}
+                    {{/each}}
+
+                    {{> pagination}}
                 </div>
             </div>
-            <button class="mdc-button mdc-button--raised" type="submit">
-                Search
-            </button>
-        </form>
-
-        {{> search_info}}
-
-        {{#each primaryResponse.hits.hits}}
-        {{{_source.rendered.scvo_search_result}}}
-        {{/each}}
-
-        {{> pagination}}
+        </div>
     </div>
 </div>
