--- a/functions/test-db/json2/scvo/templates/members/member-search.hbs
+++ b/functions/test-db/json2/scvo/templates/members/member-search.hbs
@@ -27,27 +27,27 @@
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-                        <div class="v-margin">
-                            <div class="mdc-card">
+                        <div class="v-margin-full">
+                            <div class="mdc-card search">
                                 <section class="mdc-card__primary">
                                     <h2 class="mdc-card__title mdc-card__title--large">
                                         Search SCVO's {{addCommas supplimentaryResponses.total.hits.total}} member organisations
                                     </h2>
-                                    <form action="/about/members" method="GET" [searchroute]="'member_search'" data-auto-search="true">
+                                    <form action="/about/members" method="GET" [searchroute]="'member_search'" class="search_form" data-auto-search="true">
                                         <div class="mdc-textfield">
                                             <input type="text" class="mdc-textfield__input searchRoute" placeholder="Search" value="{{params.query.q}}" name="q">
-                                            <div class="mdc-textfield__bottom-line"></div>
+                                            <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
+                                                <span class="far fa-2x fa-search" aria-hidden="true"></span>
+                                            </button>
                                         </div>
-                                        <!--
-                                        <div class="mdc-form-field">
+                                        <!-- <div class="mdc-form-field">
                                             <select class="mdc-select" role="listbox" name="type">
                                                 <option value="" {{#unless params.query.type}}selected{{/unless}}>All membership types</option>
                                                 {{#each supplimentaryResponses.types.aggregations.types.buckets}}
                                                 <option value="{{slugify key}}" {{#compare ../params.query.type "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
                                                 {{/each}}
                                             </select>
-                                        </div>
-                                        -->
+                                        </div> -->
                                     </form>
                                 </section>
                             </div>
